# sp_robot

sp_ethercat/: CMakeLists.txt  package.xml
sp_ethercat/include/sp_ethercat/: .sp_ethercat.h.swp  sp_ethercat.h
sp_ethercat/src/: .sp_ethercat.c.swp  sp_ethercat.c
sp_robot/: CMakeLists.txt  package.xml
sp_robot_description/: CMakeLists.txt  package.xml
sp_robot_description/bak/launch/: display.launch  gazebo.launch
sp_robot_description/bak/meshes/: base_link.STL  link1.STL  link2.STL
sp_robot_description/bak/robots/: sp_robot.urdf
sp_robot_description/launch/: sp_robot_rviz.launch
sp_robot_description/meshes/: link1.STL  link_eef.STL
sp_robot_description/robots/: sp_robot.urdf
sp_robot_description/rviz/: sp_robot.rviz
sp_robot_description/sp_robot/: manifest.xml
sp_robot_description/sp_robot/launch/: display.launch  gazebo.launch
sp_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
sp_robot_moveit_config/config/: controller_list.yaml  fake_controllers.yaml  joint_limits.yaml  sp_robot_description.srdf
sp_robot_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sp_robot_description_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  warehouse.launch
sp_robot_ros_control/: .README.md.swp  CMakeLists.txt  README.md  package.xml
sp_robot_ros_control/config/: sp_robot_controllers.yaml
sp_robot_ros_control/controller/: arm_controller.yaml
sp_robot_ros_control/include/sp_robot_hw_interface/: .sp_robot_hw_interface.h.swp  sp_robot_hw_interface.h
sp_robot_ros_control/launch/: iceira_diff_control.launch  sp_robot_ros_control.launch
sp_robot_ros_control/src/nodes/: sp_robot_ros_control.cpp
(+2 files in other folders)
